--- a/src/app/course/datedemo/datedemo.component.html
+++ b/src/app/course/datedemo/datedemo.component.html
@@ -2,13 +2,13 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <ul class="navbar-nav">
             <li routerLinkActive="nav-item active current">
-                <a class="navbar-brand nav-link" routerLink=""><b>Today's date</b></a>
+                <a class="navbar-brand nav-link" routerLink=""><b>Today's date:</b></a>
             </li>
             <li routerLinkActive="nav-item active current">
-                <a class="navbar-brand nav-link" routerLink="archive/:year/:month"><b>About</b></a>
+                <a class="navbar-brand nav-link" routerLink="archive/:year/:month"><b>About:</b></a>
             </li>
             <li routerLinkActive="nav-item active current">
-                <a class="navbar-brand nav-link" routerLink="**"><b>Contact</b></a>
+                <a class="navbar-brand nav-link" routerLink="**"><b>Contact:</b></a>
             </li>
         </ul> 
     </nav>
